tests/compile-fail/move_after_use.ails
module demo.move_after_use

func bad
    input x: own i32
    output own i32
    effect pure
begin
    if true then
    begin
        return x
    end
    else
    begin
        return x
    end
end
